# caroGame

./: CMakeLists.txt
Resources/: O.txt  X.txt  title.txt
src/: caroLogic.cpp  caroLogic.hpp  caroSound.cpp  caroSound.hpp  caroUI.cpp  caroUI.hpp  main.cpp
